--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
     <!-- Video Section below the hero content -->
     <section id="video-section">
-                 <source src="video.mp4" type="video/mp4">
+        <video id="background-video" autoplay loop muted>
+            <source src="video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
@@ -49,10 +50,9 @@
         <p>If you feel unsafe or in crisis, press the button below to alert your emergency contacts.</p>
         <button id="alert-button" class="alert-button">Send Emergency Alert</button>
     </section>
-
-    <footer>
-        <p>&copy; 2025 Happy Life Project</p>
-    </footer>
+<footer>
+    <p>&copy; 2025 Happy Life Project</p>
+</footer>
 
 </main>
 
