--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <h2>Meet Our Team</h2>
             <div class="team-member">
                 <h3>Pournima Wanjale & Amanpreet Singh Walia - Founders</h3>
-                <p>We are students of SY BBCA, passionate about mental health awareness. We started Happy Life with the goal of providing accessible support for everyone.</p>
+                <p>We are students of SY BCA, passionate about mental health awareness. We started Happy Life with the goal of providing accessible support for everyone.</p>
             </div>
         </div>
 
@@ -65,9 +65,22 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2025 Happy Life Project</p>
-    </footer>
+    
+   <footer>
+    <p>&copy; 2025 Happy Life Project</p>
+    <div class="social-icons">
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" width="30">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="30">
+        </a>
+        <a href="https://www.linkedin.com" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" width="30">
+        </a>
+    </div>
+</footer>
+
 
     <div class="back-to-top">⬆ Back to Top</div>
 
