--- a/contact.html
+++ b/contact.html
@@ -34,13 +34,13 @@
         <div class="contacts-container">
             <div class="contact-card">
                 <h3>National Helpline</h3>
-                <p>Call: 1800-123-456</p>
-                <p>Available 24/7 for immediate help.</p>
+                <p>Call: 14416 or 1-800-891-4416</p>
+                <p>For immediate mental health support in India, you can dial the 24/7 toll-free helpline number.</p>
             </div>
             <div class="contact-card">
-                <h3>Local Mental Health Clinic</h3>
-                <p>Address: 123 Happy St, Wellness City</p>
-                <p>Phone: +91-9876543210</p>
+                <h3>Jagruti Rehabilitation Center</h3>
+                <p>Address: Jagruti Rehabilitation Centre, Pune Solapur Road, Hadapsar, Pune - 411028 (Opposite Krishi Tantra Vidyalaya, Sitai Hake Nagar). </p>
+                <p>Website: www.jagrutirehab.org </p>
             </div>
             <div class="contact-card">
                 <h3>Add Your Contact</h3>
